--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pa",
+  "name": "idpay",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/base": "^5.0.0-beta.69",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/lab": "^6.0.0-beta.26",
+    "@mui/material": "^6.4.3",
+    "@mui/x-date-pickers": "^7.25.0",
+    "@pagopa/mui-italia": "^1.6.0-alpha.20241128151814",
+    "date-fns": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
