--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "tslib": "^2.8.1"
   },
