fix deploy pipeline

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -89,7 +89,7 @@ stages:
               REACT_APP_ENV: '${{ parameters.environment }}'
               VITE_API_URL: '$(vite_api_url)'
 
-          - publish: $(System.DefaultWorkingDirectory)/build
+          - publish: dist
             artifact: Bundle
 
   # Deploy bundle
