--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-VITE_API_URL=https://api-io.dev.cstar.pagopa.it/idpay/self-expense
+VITE_API_URL=https://api-io.uat.cstar.pagopa.it/idpay/self-expense
