chore: update codowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,3 @@
-* @pagopa/idpay-app-maintainer-team
+# see https://help.github.com/en/articles/about-code-owners#example-of-a-codeowners-file
+# Add the repository's code owners here
+- @pagopa/idpay-app-maintainer-team @pagopa/idpay-approver-team @dariopelliccioli
